crates/stackable-operator/src/crd/git_sync/snapshots/stackable_operator__crd__git_sync__v1alpha2_impl__tests__git_sync_ca_cert_containers.snap
---
source: crates/stackable-operator/src/crd/git_sync/v1alpha2_impl.rs
expression: "serde_yaml::to_string(&git_sync_resources.git_sync_containers).unwrap()"
---
- args:
  - |-
    mkdir --parents /stackable/log/git-sync-0 && exec > >(tee /stackable/log/git-sync-0/container.stdout.log) 2> >(tee /stackable/log/git-sync-0/container.stderr.log >&2)

    prepare_signal_handlers()
    {
        unset term_child_pid
        unset term_kill_needed
        trap 'handle_term_signal' TERM
    }

    handle_term_signal()
    {
        if [ -n "${term_child_pid:-}" ]; then
            kill -TERM "${term_child_pid}" 2>/dev/null
        else
            term_kill_needed="yes"
        fi
    }

    wait_for_termination()
    {
        set +e
        term_child_pid=$1
        if [[ -v term_kill_needed ]]; then
            kill -TERM "${term_child_pid}" 2>/dev/null
        fi
        wait ${term_child_pid} 2>/dev/null
        term_child_status=$?
        trap - TERM
        if [ "${term_child_status}" -gt 128 ]; then
            wait ${term_child_pid} 2>/dev/null
            term_child_status=$?
        fi
        set -e
        return ${term_child_status}
    }

    prepare_signal_handlers
    /stackable/git-sync --depth=3 --git-config='http.sslCAInfo:/stackable/gitca-0/ca.crt,safe.directory:/tmp/git' --link=current --one-time=false --period=60s --ref=trunk --repo=ssh://git@github.com/stackabletech/repo.git --rev=HEAD --root=/tmp/git &
    wait_for_termination $!
  command:
  - /bin/bash
  - -x
  - -euo
  - pipefail
  - -c
  env:
  - name: VAR1
    value: value1
  image: oci.stackable.tech/sdp/product:latest
  imagePullPolicy: Always
  name: git-sync-0
  resources:
    limits:
      cpu: 200m
      memory: 64Mi
    requests:
      cpu: 100m
      memory: 64Mi
  volumeMounts:
  - mountPath: /tmp/git
    name: content-from-git-0
  - mountPath: /stackable/log
    name: log-volume
  - mountPath: /mnt/extra-volume
    name: extra-volume
  - mountPath: /stackable/gitca-0
    name: ca-cert-0
