crates/stackable-operator/src/crd/git_sync/snapshots/stackable_operator__crd__git_sync__v1alpha2_impl__tests__multiple_git_syncs_containers.snap
---
source: crates/stackable-operator/src/crd/git_sync/v1alpha2_impl.rs
expression: "serde_yaml::to_string(&git_sync_resources.git_sync_containers).unwrap()"
---
- args:
  - |-
    mkdir --parents /stackable/log/git-sync-0 && exec > >(tee /stackable/log/git-sync-0/container.stdout.log) 2> >(tee /stackable/log/git-sync-0/container.stderr.log >&2)

    prepare_signal_handlers()
    {
        unset term_child_pid
        unset term_kill_needed
        trap 'handle_term_signal' TERM
    }

    handle_term_signal()
    {
        if [ -n "${term_child_pid:-}" ]; then
            kill -TERM "${term_child_pid}" 2>/dev/null
        else
            term_kill_needed="yes"
        fi
    }

    wait_for_termination()
    {
        set +e
        term_child_pid=$1
        if [[ -v term_kill_needed ]]; then
            kill -TERM "${term_child_pid}" 2>/dev/null
        fi
        wait ${term_child_pid} 2>/dev/null
        term_child_status=$?
        trap - TERM
        if [ "${term_child_status}" -gt 128 ]; then
            wait ${term_child_pid} 2>/dev/null
            term_child_status=$?
        fi
        set -e
        return ${term_child_status}
    }

    prepare_signal_handlers
    /stackable/git-sync --depth=1 --git-config='safe.directory:/tmp/git' --link=current --one-time=false --period=20s --ref=main --repo=https://github.com/stackabletech/repo1 --root=/tmp/git &
    wait_for_termination $!
  command:
  - /bin/bash
  - -x
  - -euo
  - pipefail
  - -c
  env:
  - name: GITSYNC_USERNAME
    value: overridden-username
  - name: VAR1
    value: value1
  image: oci.stackable.tech/sdp/product:latest
  imagePullPolicy: Always
  name: git-sync-0
  resources:
    limits:
      cpu: 200m
      memory: 64Mi
    requests:
      cpu: 100m
      memory: 64Mi
  volumeMounts:
  - mountPath: /tmp/git
    name: content-from-git-0
  - mountPath: /stackable/log
    name: log-volume
  - mountPath: /mnt/extra-volume
    name: extra-volume
- args:
  - |-
    mkdir --parents /stackable/log/git-sync-1 && exec > >(tee /stackable/log/git-sync-1/container.stdout.log) 2> >(tee /stackable/log/git-sync-1/container.stderr.log >&2)

    prepare_signal_handlers()
    {
        unset term_child_pid
        unset term_kill_needed
        trap 'handle_term_signal' TERM
    }

    handle_term_signal()
    {
        if [ -n "${term_child_pid:-}" ]; then
            kill -TERM "${term_child_pid}" 2>/dev/null
        else
            term_kill_needed="yes"
        fi
    }

    wait_for_termination()
    {
        set +e
        term_child_pid=$1
        if [[ -v term_kill_needed ]]; then
            kill -TERM "${term_child_pid}" 2>/dev/null
        fi
        wait ${term_child_pid} 2>/dev/null
        term_child_status=$?
        trap - TERM
        if [ "${term_child_status}" -gt 128 ]; then
            wait ${term_child_pid} 2>/dev/null
            term_child_status=$?
        fi
        set -e
        return ${term_child_status}
    }

    prepare_signal_handlers
    /stackable/git-sync --depth=3 --git-config='safe.directory:/tmp/git,http.sslCAInfo:/tmp/ca-cert/ca.crt' --link=current --one-time=false --period=60s --ref=trunk --repo=https://github.com/stackabletech/repo2 --rev=HEAD --root=/tmp/git &
    wait_for_termination $!
  command:
  - /bin/bash
  - -x
  - -euo
  - pipefail
  - -c
  env:
  - name: GITSYNC_PASSWORD
    valueFrom:
      secretKeyRef:
        key: password
        name: git-credentials
  - name: GITSYNC_USERNAME
    value: overridden-username
  - name: VAR1
    value: value1
  image: oci.stackable.tech/sdp/product:latest
  imagePullPolicy: Always
  name: git-sync-1
  resources:
    limits:
      cpu: 200m
      memory: 64Mi
    requests:
      cpu: 100m
      memory: 64Mi
  volumeMounts:
  - mountPath: /tmp/git
    name: content-from-git-1
  - mountPath: /stackable/log
    name: log-volume
  - mountPath: /mnt/extra-volume
    name: extra-volume
- args:
  - |-
    mkdir --parents /stackable/log/git-sync-2 && exec > >(tee /stackable/log/git-sync-2/container.stdout.log) 2> >(tee /stackable/log/git-sync-2/container.stderr.log >&2)

    prepare_signal_handlers()
    {
        unset term_child_pid
        unset term_kill_needed
        trap 'handle_term_signal' TERM
    }

    handle_term_signal()
    {
        if [ -n "${term_child_pid:-}" ]; then
            kill -TERM "${term_child_pid}" 2>/dev/null
        else
            term_kill_needed="yes"
        fi
    }

    wait_for_termination()
    {
        set +e
        term_child_pid=$1
        if [[ -v term_kill_needed ]]; then
            kill -TERM "${term_child_pid}" 2>/dev/null
        fi
        wait ${term_child_pid} 2>/dev/null
        term_child_status=$?
        trap - TERM
        if [ "${term_child_status}" -gt 128 ]; then
            wait ${term_child_pid} 2>/dev/null
            term_child_status=$?
        fi
        set -e
        return ${term_child_status}
    }

    prepare_signal_handlers
    /stackable/git-sync --depth=1 --git-config='safe.directory:/tmp/git,key:value,safe.directory:/safe-dir' --link=current --one-time=false --period=20s --ref=feat/git-sync --repo=https://github.com/stackabletech/repo3 --root=/tmp/git &
    wait_for_termination $!
  command:
  - /bin/bash
  - -x
  - -euo
  - pipefail
  - -c
  env:
  - name: GITSYNC_USERNAME
    value: overridden-username
  - name: VAR1
    value: value1
  image: oci.stackable.tech/sdp/product:latest
  imagePullPolicy: Always
  name: git-sync-2
  resources:
    limits:
      cpu: 200m
      memory: 64Mi
    requests:
      cpu: 100m
      memory: 64Mi
  volumeMounts:
  - mountPath: /tmp/git
    name: content-from-git-2
  - mountPath: /stackable/log
    name: log-volume
  - mountPath: /mnt/extra-volume
    name: extra-volume
